--- a/Projects.html
+++ b/Projects.html
@@ -100,6 +100,7 @@
     </nav>
     <h1>Welcome to My First Website</h1>
     <p>Hello, I'm Kumar Shashank and i am new to web development and i don't have any projects yet.If you guys have any ideas you can freely share them with me.</p>
+    <p>Just mail it to at mr.kr.shashank0019@gmail.com</p>
     <footer>
         <p style="text-align: center;">Copyright &#169; 2025 My portfolio - 'Kumar Shashank'. All rights reserved.</p>
     </footer>
