fixed double files and not working links.

--- a/html/Projects.html
+++ b/html/Projects.html
@@ -94,20 +94,12 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="About Me.html">About Me</a></li>
-            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="/workspaces/Gaming-Store/html/About Me.html">About Me</a></li>
+            <li><a href="/workspaces/Gaming-Store/html/Contact.html">Contact</a></li>
         </ul>
     </nav>
     <h1>Welcome to My First Website</h1>
     <p>Hello, I'm Kumar Shashank.</p>
-    <p>These are my Projects.</p>
-    <ol>
-        <li>Calculator: This is a simple calculator application made out of Html and python.
-            And you can download it for pc from here (But It's still in progress,and is the raw file.)</li>
-    <ul style="color: white;">
-        <li><a href="Calculator.py">Download Calculator</a></li>
-    </ul>
-    </ol>
     <footer>
         <p style="text-align: center;">Copyright &#169; 2025 My portfolio - 'Kumar Shashank'. All rights reserved.</p>
     </footer>
