--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
     <body>
     <nav>
         <ul>
-            <li><a href="About Me.html">About Me</a></li>
-            <li><a href="Projects.html">My Projects</a></li>
-            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="/workspaces/Gaming-Store/html/About Me.html">About Me</a></li>
+            <li><a href="/workspaces/Gaming-Store/html/Projects.html">My Projects</a></li>
+            <li><a href="/workspaces/Gaming-Store/html/Contact.html">Contact</a></li>
         </ul>
     </nav>
     <h1 style="margin: 0px; padding: 20px;">Welcome to My First Website</h1>
