--- a/html/Contact.html
+++ b/html/Contact.html
@@ -88,8 +88,8 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="About Me.html">About Me</a></li>
-            <li><a href="Projects.html">My Projects</a></li>
+            <li><a href="/workspaces/Gaming-Store/html/About Me.html">About Me</a></li>
+            <li><a href="/workspaces/Gaming-Store/html/Projects.html">My Projects</a></li>
         </ul>
     </nav>
     <h1>Welcome to My First Website</h1>
