Revert "Codespace symmetrical winner 5gx95px4gvvvf7wjv"

--- a/Projects.html
+++ b/Projects.html
@@ -99,7 +99,15 @@
         </ul>
     </nav>
     <h1>Welcome to My First Website</h1>
-    <p>Hello, I'm Kumar Shashank and i am new to web development and i don't have any projects yet.If you guys have any ideas you can freely share them with me.</p>
+    <p>Hello, I'm Kumar Shashank.</p>
+    <p>These are my Projects.</p>
+    <ol>
+        <li>Calculator: This is a simple calculator application made out of Html and python.
+            And you can download it for pc from here (But It's still in progress,and is the raw file.)</li>
+    <ul style="color: white;">
+        <li><a href="Calculator.py">Download Calculator</a></li>
+    </ul>
+    </ol>
     <footer>
         <p style="text-align: center;">Copyright &#169; 2025 My portfolio - 'Kumar Shashank'. All rights reserved.</p>
     </footer>
